--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -100,7 +100,7 @@ main{
 
 
 #addGoodsType{
-    display: none;
+    /* display: none; */
     text-align: center;
     padding-top: 50px;
 }
@@ -122,13 +122,15 @@ main{
 }
 
 #addGoods{
-    /* display: none; */
+    display: none;
     padding: 20px;
     position: relative;
+    height: 520px;
 }
 .box_msg{
     border-collapse: collapse;
     margin: 0 auto;
+    margin-bottom: 65px;
 }
 .box_msg td{
     border:1px solid black;
@@ -180,9 +182,60 @@ main{
     border: 1px solid #ccc;
     border-radius: 5px;
     left:46%;
-    bottom: -30px;
+    bottom: 18px;
     cursor: pointer;
 }
+/* goods_all  商品的信息*/
+.goods_all{
+    border-collapse: collapse;
+    margin: 0 auto;
+    /* table-layout: fixed; */
+    width: 1000px;
+    
+}
+.goods_all caption{
+    margin-bottom: 10px;
+    font-weight: 600;
+
+}
+.goods_all caption input{
+    vertical-align: middle;
+    height: 26px;
+    width: 222px;
+}
+.goods_all td{
+    border:1px solid black;
+    line-height: 2rem;
+    text-align: center;
+    font-size: 14px;
+}
+.goods_all td:nth-of-type(1){
+    width: 70px;
+}
+.goods_all td:nth-of-type(2){
+    width: 180px;
+}
+.goods_all td:nth-of-type(3){
+    width: 80px;
+}
+.goods_all td:nth-of-type(4){
+    width: 60px;
+}
+.goods_all td:nth-of-type(5){
+    width: 80px;
+}
+.goods_all td:nth-of-type(6){
+    width: 80px;
+    
+}
+
+.goods_all td:nth-of-type(8){
+    width:150px;
+}
+.goods_all td:nth-of-type(9){
+    width: 80px;
+}
+
 
 
 #users{
